[package]
name = "wifi-manager-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
esp32 = ["esp-idf-sys", "esp-idf-svc", "embedded-svc"]

[dependencies]
log = "0.4"
url = "2"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
ciborium = { version = "0.2.0", default-features = false }
alloc-no-stdlib = "2.0.3"
spin = "0.9"
esp-idf-sys = { version = "0", features = ["binstart"], optional = true }
esp-idf-svc = { version = "0", optional = true }
embedded-svc = { version = "0", optional = true }

[dev-dependencies]
simplelog = "0.12"
